// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Cards/NewSchoolCard with many locations 1`] = `
<article
  className="Card NewSchoolCard animatedCard"
>
  <img
    alt="Fake Boot Camp Logo"
    className="logo"
    src="https://s3.amazonaws.com/operationcode-assets/codeSchoolLogos/code_immersives.jpg"
  />
  <div
    className="flexContainer"
  >
    <button
      className="Button primary"
      disabled={false}
      onClick={[Function]}
      tabIndex={0}
      type="button"
    >
      <a
        className=""
        href="https://google.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          className="screenReaderOnly"
        >
          Opens in new window
        </span>
        Go To Website
      </a>
    </button>
    <button
      className="Button primary"
      disabled={false}
      onClick={[Function]}
      tabIndex={0}
      type="button"
    >
      <span>
        See Locations
      </span>
    </button>
  </div>
  <hr
    className="divider"
  />
  <section
    className="flexContainer detailIcons"
  >
    <div />
  </section>
</article>
`;

exports[`Storyshots Cards/NewSchoolCard with no physical locations 1`] = `
<article
  className="Card NewSchoolCard animatedCard"
>
  <img
    alt="Fake Boot Camp Logo"
    className="logo"
    src="https://s3.amazonaws.com/operationcode-assets/codeSchoolLogos/code_immersives.jpg"
  />
  <div
    className="flexContainer"
  >
    <button
      className="Button primary"
      disabled={false}
      onClick={[Function]}
      tabIndex={0}
      type="button"
    >
      <a
        className=""
        href="https://google.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          className="screenReaderOnly"
        >
          Opens in new window
        </span>
        Go To Website
      </a>
    </button>
    <span
      className="singleLocationText"
    >
      Online Only
    </span>
  </div>
  <hr
    className="divider"
  />
  <section
    className="flexContainer detailIcons"
  >
    <div />
  </section>
</article>
`;

exports[`Storyshots Cards/NewSchoolCard with one location 1`] = `
<article
  className="Card NewSchoolCard animatedCard"
>
  <img
    alt="Fake Boot Camp Logo"
    className="logo"
    src="https://s3.amazonaws.com/operationcode-assets/codeSchoolLogos/code_immersives.jpg"
  />
  <div
    className="flexContainer"
  >
    <button
      className="Button primary"
      disabled={false}
      onClick={[Function]}
      tabIndex={0}
      type="button"
    >
      <a
        className=""
        href="https://google.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          className="screenReaderOnly"
        >
          Opens in new window
        </span>
        Go To Website
      </a>
    </button>
    <span
      className="singleLocationText"
    >
      Los Angeles, CA
    </span>
  </div>
  <hr
    className="divider"
  />
  <section
    className="flexContainer detailIcons"
  >
    <div />
  </section>
</article>
`;
